--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
       <h1 class="mt-5">OMG! You will not believe me but..</h1>
       <img src="./rigo-baby.jpg" />
       <p id="excuse">My dog eat my homework</p>
+      <button id="btn">Generate new excuse</button>
       <div class="fixed-bottom p-4">
         Made with ❤️ by
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
