review: agregar buenas practicas y legibilidad

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
     <div class="container-fluid text-center">
       <h1 class="mt-5">OMG! You will not believe me but..</h1>
       <img src="./rigo-baby.jpg" />
-      <p id="excuse">My dog eat my homework</p>
-      <button id="btn">Generate new excuse</button>
+      <p id="excuseGenerator">My dog eat my homework</p>
+      <button id="buttonExcuse">Generate new excuse</button>
       <div class="fixed-bottom p-4">
         Made with ❤️ by
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
